# lxd-desktop

./: .gitignore  CHANGELOG  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  README.rst  main.py  pyproject.toml
snap/: snapcraft.yaml
src/lxc_desktop/: app.py  config.py
src/lxc_desktop/controllers/: main_controller.py
src/lxc_desktop/views/: main.qml
src/lxd_desktop/: .#__init__.py  __main__.py  app.py  config.py
src/lxd_desktop/controllers/: main_controller.py
src/lxd_desktop/views/: main.qml
